--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,3 +18,15 @@ a {
 .custom-shadow {
   box-shadow: 0 0 20px rgb(0, 0, 0, 0.1);
 }
+
+html {
+  scroll-behavior: smooth;
+}
+::-webkit-scrollbar {
+  width: 0.5rem;
+  border-radius: 8px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #dbdada;
+  border-radius: 8px;
+}
