--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,10 +23,11 @@ html {
   scroll-behavior: smooth;
 }
 ::-webkit-scrollbar {
-  width: 0.5rem;
+  width: 0.35rem;
   border-radius: 8px;
+  height: 20px;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #dbdada;
+  background-color: #e5e7eb;
   border-radius: 8px;
 }
