--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,3 +31,25 @@ html {
   background-color: #e5e7eb;
   border-radius: 8px;
 }
+
+.loader {
+  width: 48px;
+  height: 48px;
+  line-height: 48px;
+  text-align: center;
+  border: 4px solid #4b5563;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
