--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,3 +53,10 @@ html {
     transform: rotate(360deg);
   }
 }
+
+.container {
+  width: 1200px;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
