--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,3 +60,11 @@ html {
   margin: 0 auto;
   padding: 0 1rem;
 }
+
+@media only screen and (max-width: 720px) {
+  ::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+    background: transparent;
+  }
+}
